fixed issue where user could resize textarea too much

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -330,6 +330,7 @@ input, textarea {
     transition-duration: 0.5s;
     transition-property: border-color, outline-color;
     transition-timing-function: linear;
+	max-width: 100%;
 }
 
 input:focus, textarea:focus {
